--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -1,6 +1,6 @@
 ---
 layout: archive
-title: "Contacts"
-permalink: /contacts/
+title: "Contact Me"
+permalink: /contact/
 author_profile: true
 ---
