--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -7,3 +7,8 @@ redirect_from:
   - /resume
 ---
 
+<embed src="../files/Yiming_Xu_s_CV_C.pdf" type="application/pdf" width="100%" height="600px">
+
+  <p>
+    <a href="../files/Yiming_Xu_s_CV_C.pdf" download="Yiming_Xu_s_CV_C.pdf">Download PDF</a>
+  </p>
