--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -5,9 +5,9 @@ permalink: /contact/
 author_profile: true
 ---
 
-<h2>Contact Information</h2>
+<!-- <h2>Contact Information</h2>
     <p><strong>Name:</strong> Yiming Xu</p>
     <p><strong>Email:</strong> <a href="mailto:yiming.xu@utexas.edu">yiming.xu@utexas.edu</a></p>
     <p><strong>Phone:</strong> <a href="tel:+13528713481">+1 (352) 871-3481</a></p>
     <p><strong>Website:</strong> <a href="https://xuyimingxym.github.io">xuyimingxym.github.io</a></p>
-    <p><strong>Address:</strong> 310 Inner Campus Dr, B7500, Austin, TX 78712</p>
+    <p><strong>Address:</strong> 310 Inner Campus Dr, B7500, Austin, TX 78712</p> -->
