update About page

--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -7,9 +7,13 @@ redirect_from:
   - /resume
 ---
 
+
+
 <p>
   <a href="../files/Yiming_Xu_s_CV_C.pdf" download="Yiming_Xu_s_CV_C.pdf">Download My CV</a>
 </p>
 
+
 <embed src="../files/Yiming_Xu_s_CV_C.pdf" type="application/pdf" width="100%" height="800px">
 
+  <p>Updated on 03/06/2025</p>
