--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -11,35 +11,9 @@ author_profile: true
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Publications - Xu, Y.</title>
+    <title>Publications</title>
     <style>
-        body {
-            font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-            line-height: 1.6;
-            color: #333;
-            max-width: 900px;
-            margin: 40px auto;
-            padding: 20px;
-        }
-        h1 {
-            border-bottom: 2px solid #333;
-            padding-bottom: 10px;
-            font-size: 24px;
-            text-transform: uppercase;
-            letter-spacing: 1px;
-        }
-        h2 {
-            font-size: 20px;
-            margin-top: 30px;
-            color: #2c3e50;
-        }
-        h3 {
-            font-size: 16px;
-            font-style: italic;
-            color: #555;
-            margin-top: 20px;
-            margin-bottom: 10px;
-        }
+    
         ol {
             padding-left: 20px;
         }
@@ -67,8 +41,6 @@ author_profile: true
     </style>
 </head>
 <body>
-
-    <h1>Publications</h1>
 
     <h2>Peer-Reviewed Journal Papers</h2>
     <p class="note">(*Indicates corresponding author)</p>
