--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -35,12 +35,12 @@ author_profile: true
             font-size: 14px;
             color: #666;
             font-style: italic;
-            margin-top: -15px;
-            margin-bottom: 20px;
+            margin-top: -5px;
         }
     </style>
 </head>
 <body>
+<a href="https://scholar.google.com/citations?user=sQfzouEAAAAJ&hl=en" target="_blank">[Google Scholar]</a>
 
     <h2>Peer-Reviewed Journal Papers</h2>
     <p class="note">(*Indicates corresponding author)</p>
@@ -62,7 +62,7 @@ author_profile: true
 
     <h3>Co-Authored Publications</h3>
     <ol>
-        <li>Wang, H., Davis, W., Jiao, J.*, <strong>Xu, Y.</strong> (2025). Street semantic tree: a knowledge-driven GeoAI framework for urban e-scooter ridership classification. <em>International Journal of Geographical Information Science</em>.</li>
+        <li>Wang, H., Davis, W., <strong>Xu, Y.</strong>, Yu, J., Mai, G., Jiao, J.*, (2025). Street Semantic Tree: A Knowledge-driven GeoAI Framework for Urban E-scooter Ridership Classification. <em>International Journal of Geographical Information Science</em>.</li>
         <li>Jiao, J., Afroogh, S.*, <strong>Xu, Y.</strong>, Phillips, C. (2025). Navigating LLM Ethics: Advancements, Confrontations, and Future Trajectories. <em>AI and Ethics</em>.</li>
         <li>Wang, T., He, C., Li, H., Li, Y., <strong>Xu, Y.</strong>, Wang, Y., Jiao, J. (2025). HLCG: A Hierarchical Lane-Changing Gaming Decision Model for Heterogeneous Traffic Flow on Two-Lane Highways. <em>Transportation Research Record</em>.</li>
         <li>Zhang, X., Zhao, X., <strong>Xu, Y.</strong>, Lovreglio, R.*, Nilsson, D. (2024). Situational-Aware Multi-Graph Convolutional Recurrent Network (SA-MGCRN) for Travel Demand Forecasting During Wildfires. <em>Transportation Research Part A: Policy and Practice</em>.</li>
