--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -5,6 +5,17 @@ permalink: /teaching/
 author_profile: true
 ---
 
+<figure style="max-width: 800px; margin: 20px auto; padding: 20px; background-color: #f9f9f9; border-left: 5px solid #4a4a4a;">
+  <blockquote style="margin: 0; padding: 0; border: none;">
+    <p style="font-family: Georgia, 'Times New Roman', serif; font-size: 1.25rem; font-style: italic; line-height: 1.6; color: #333; margin-bottom: 15px;">
+      "The function of education is to teach one to think intensively and to think critically. Intelligence plus character &mdash; that is the goal of true education."
+    </p>
+  </blockquote>
+  <figcaption style="font-family: Arial, sans-serif; text-align: right; font-weight: bold; color: #555;">
+    &mdash; <cite>Martin Luther King, Jr.</cite>
+  </figcaption>
+</figure>
+
 {% include base_path %}
 
 {% for post in site.teaching reversed %}
