--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -21,3 +21,13 @@ author_profile: true
 {% for post in site.teaching reversed %}
   {% include archive-single.html %}
 {% endfor %}
+
+<figure style="max-width: 640px; margin: 20px auto; text-align: center;">
+  <img src="../files/teaching_pic1.jpeg" 
+       alt="LA 329 Global Learning Seminar Class, Spring 2024" 
+       style="max-width: 100%; height: auto; border-radius: 5px; box-shadow: 0 4px 6px rgba(0,0,0,0.1);">
+  
+  <figcaption style="margin-top: 10px; font-family: Arial, sans-serif; color: #666; font-size: 0.9rem;">
+    LA 329 Global Learning Seminar Class, Spring 2024
+  </figcaption>
+</figure>
