--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -35,6 +35,8 @@ author_profile: true
 </head>
 <body>
     <ol>
+        <li><strong>Xu, Y.</strong> (2026). Digital Twins for Smarter Cities. <em>TRB 2026 Lectern Session 4039 - Digital Twins: Simulating Systems Across Sectors, Washington, D.C.</em></li>
+        <li><strong>Xu, Y.</strong> (2026). AI-Powered Transportation Digital Twin. <em>TRB 2026 Lectern Session 4068 - Digitization of Road Infrastructure, Washington, D.C.</em></li>
         <li><strong>Xu, Y.</strong> (2025). Urban Digital Twins for Smart Cities. <em>City of Austin - Digital Twin Partnership in Action Workshop, Austin, TX.</em></li>
         <li><strong>Xu, Y.</strong> (2025). LLM-Enabled Transportation Digital Twin for Smart Cities. <em>Smart Cities and AI Symposium, Austin, TX.</em></li>
         <li><strong>Xu, Y.</strong> (2025). Digital Twins and LLM Agents for Smart Cities. <em>Good Systems Symposium, Austin, TX.</em></li>
